
set(SRCS
TCutObj.cxx
TCutSet.cxx
)

set(INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
)
include_directories( ${INCLUDE_DIRECTORIES})


set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
)
link_directories( ${LINK_DIRECTORIES})

String(REPLACE ".cxx" ".h" HDRS "${SRCS}")
ROOT_GENERATE_DICTIONARY( G__CutSet ${HDRS} LINKDEF CutSetLinkDef.h)
list(APPEND SRCS G__CutSet.cxx)
  
add_library(CutSet SHARED ${SRCS} ${HDRS})
target_link_libraries(CutSet ${ROOT_LIBRARIES} ${ALIEN_LIB} ${APPMON_LIB})

install(TARGETS CutSet
RUNTIME DESTINATION bin COMPONENT RUNTIME
LIBRARY DESTINATION lib COMPONENT RUNTIME
ARCHIVE DESTINATION lib COMPONENT DEVELOPMENT)
